Add personal access token and ssh authentication against git repositories to the Artemis server (GitService: clone, pull, push, ...) (#2620)